Update paths in index.html for CSS, JS, and image assets

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <meta name="description" content="IE9 Test Drive Demo" />
     <meta name="t_omni_demopage" content="1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" type="text/css" href="BaseStyles.css" />
-    <link rel="shortcut icon" href="FavIcon.ico" />
-    <link rel="stylesheet" type="text/css" href="maze.css" />
-    <script type="text/javascript" src="BrowserInfo.js"></script>
-    <script type="text/javascript" src="seedrandom.js"></script>
-    <script type="text/javascript" src="maze.js"></script>
+    <link rel="stylesheet" type="text/css" href="src/css/BaseStyles.css" />
+    <link rel="shortcut icon" href="public/FavIcon.ico" />
+    <link rel="stylesheet" type="text/css" href="src/css/maze.css" />
+    <script type="text/javascript" src="src/js/BrowserInfo.js"></script>
+    <script type="text/javascript" src="src/js/seedrandom.js"></script>
+    <script type="text/javascript" src="src/js/maze.js"></script>
   </head>
   <body onload="initialize()">
     <div id="ReturnAndShareControls"></div>
@@ -30,7 +30,7 @@
     <div id="DemoContent">
       <div id="Content">
         <div id="LeftSidebar">
-          <img id="LeftSidebarImage" src="pencil.png" />
+          <img id="LeftSidebarImage" src="public/pencil.png" />
         </div>
         <div id="MazeContainer">
           <div id="summary">
